# web-crawler

./: .gitignore  README.md  pyproject.toml  requirements.txt  webcrawler.py
crawler_engine/: httpclient.py  link_extractor  page.py
knowledge_graph/: visualiser.py
web_crawler/: __init__.py  __main__.py
web_crawler/crawler_engine/: crawler.py  frontier.py  httpclient.py  link_extractor.py  link_sanitizer.py  page.py
web_crawler/knowledge_graph/: visualiser.py
